--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <a href=""><img src="img/logo-index.png" alt="logo of borodinski barbershop" width="371" height="155"></a>
         <ul>
             <li>
-                <a href="#">About</a>
+                <a href="blank.html">About</a>
             </li>
             <li>
-                <a href="#">News</a>
+                <a href="blank.html">News</a>
             </li>
             <li>
                 <a href="pricing.html">Pricing</a>
@@ -22,10 +22,10 @@
                 <a href="catalog.html">Store</a>
             </li>
             <li>
-                <a href="#">Contacts</a>
+                <a href="blank.html">Contacts</a>
             </li>
         </ul>
-        <a href="#">Sign Up</a>
+        <a href="blank.html">Log In</a>
     </nav>
 </header>
 
@@ -91,10 +91,82 @@
         <h2>Book now</h2>
         <p>Select a date and we will contact you to confirm the availability</p>
         <form action="https://echo.htmlacademy.ru" method="post">
-
+            <p>
+                <label for="appointment-date">Date</label>
+                <input id="appointment-date" type="text" name="date" placeholder="12.31.2023">
+            </p>
+            <p>
+                <label for="appointment-time">Time</label>
+                <input id="appointment-time" type="text" name="time" placeholder="10:00">
+            </p>
+            <p>
+                <label for="appointment-name">Name</label>
+                <input id="appointment-name" type="text" name="name" placeholder="Harold">
+            </p>
+            <p>
+                <label for="appointment-phone">Phone</label>
+                <input id="appointment-phone" type="tel" name="phone" placeholder="+1 270-633-4108">
+            </p>
+            <button type="submit">Submit</button>
         </form>
     </section>
 </main>
+
+<footer>
+    <section>
+        <h2>Our location</h2>
+        <p>
+            Barbershop Borodinski <br>
+            Address: 1651 Willard Road, Latriceshire, FL 48221 <br>
+            <a href="blank.html">Directions</a><br>
+            Phone: <a href="tel:+17348957190">+1 734-895-7190</a>
+        </p>
+    </section>
+    <section>
+        <h2>Let's be friends!</h2>
+        <ul>
+            <li>
+                <a href="#">VK</a>
+            </li>
+            <li>
+                <a href="#">Facebook</a>
+            </li>
+            <li>
+                <a href="#">Instagram</a>
+            </li>
+        </ul>
+    </section>
+    <p>
+        Design by:
+        <a href="https://htmlacademy.ru">HTML Academy</a>
+    </p>
+</footer>
+
+<section>
+    <h2>Login</h2>
+    <p>
+        Enter your login and password below
+    </p>
+    <form action="https://echo.htmlacademy.ru" method="post">
+        <label for="login-login">Login</label>
+        <input id="login-login" type="email" name="name" placeholder="email@example.com">
+
+        <label for="login-password">Password</label>
+        <input id="login-password" type="password" name="password" placeholder="*******">
+
+        <label>
+            <input type="checkbox" name="remember">
+        </label>
+        <a href="#">Forgot your password?</a>
+        <button type="submit">Log In</button>
+    </form>
+    <button type="button">Close</button>
+</section>
+<section>
+    <h2>Directions</h2>
+<!--    map is going to be here-->
+    <button type="button">Close</button>
+</section>
 
 </body>
 </html>
