started markup of catalog page

--- a/catalog.html
+++ b/catalog.html
@@ -2,9 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Catalog - Barbershop "Borodinski"</title>
 </head>
 <body>
-
+<header>
+    <nav>
+        <a href=""><img src="img/logo-index.png" alt="logo of borodinski barbershop" width="371" height="155"></a>
+        <ul>
+            <li>
+                <a href="blank.html">About</a>
+            </li>
+            <li>
+                <a href="blank.html">News</a>
+            </li>
+            <li>
+                <a href="pricing.html">Pricing</a>
+            </li>
+            <li>
+                <a href="catalog.html">Store</a>
+            </li>
+            <li>
+                <a href="blank.html">Contacts</a>
+            </li>
+        </ul>
+        <a href="blank.html">Log In</a>
+    </nav>
+</header>
+<main>
+    <h1>Aftercare Items</h1>
+</main>
 </body>
 </html>
