catalog page and product page markup completed, uploaded product photos

--- a/catalog.html
+++ b/catalog.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <title>Catalog - Barbershop "Borodinski"</title>
 </head>
+
 <body>
+
 <header>
     <nav>
-        <a href=""><img src="img/logo-index.png" alt="logo of borodinski barbershop" width="371" height="155"></a>
+        <a href="index.html"><img src="img/logo.svg" alt="logo of borodinski barbershop" width="111" height="24"></a>
         <ul>
             <li>
                 <a href="blank.html">About</a>
@@ -28,8 +30,215 @@
         <a href="blank.html">Log In</a>
     </nav>
 </header>
+
 <main>
-    <h1>Aftercare Items</h1>
+    <h1>Aftercare Products</h1>
+    <ul>
+        <li><a href="index.html">Main Page</a></li>
+        <li><a href="catalog.html">Store</a></li>
+        <li>Aftercare Products</li>
+    </ul>
+    <section>
+        <h2>Filters</h2>
+        <form method="get" action="https://echo.htmlacademy.ru">
+            <fieldset>
+                <legend>Brand:</legend>
+                <ul>
+                    <li>
+                        <input type="checkbox" name="baxter-of-california" id="filter-baxter-of-california" checked>
+                        <label for="filter-baxter-of-california">Baxter of California</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" name="mr-natty" id="filter-mr-natty">
+                        <label for="filter-mr-natty">Mr Natty</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" name="suavecito" id="filter-suavecito" checked>
+                        <label for="filter-suavecito">Suavecito</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" name="malin-goetz" id="filter-malin-goetz">
+                        <label for="filter-malin-goetz">Malin+Goetz</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" name="murrays" id="filter-murrays">
+                        <label for="filter-murrays">Murray’s</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" name="american-crew" id="filter-american-crew" checked>
+                        <label for="filter-american-crew">American Crew</label>
+                    </li>
+                </ul>
+            </fieldset>
+            <fieldset>
+                <legend>Category:</legend>
+                <ul>
+                    <li>
+                        <input type="radio" name="product-category" id="filter-shave" value="shave">
+                        <label for="filter-shave">Shave</label>
+                    </li>
+                    <li>
+                        <input type="radio" name="product-category" id="filter-care" value="hair-care" checked>
+                        <label for="filter-care">Hair Care</label>
+                    </li>
+                    <li>
+                        <input type="radio" name="product-category" id="filter-accessories" value="accessories">
+                        <label for="filter-accessories">Accessories</label>
+                    </li>
+                </ul>
+            </fieldset>
+            <button type="submit">Apply</button>
+        </form>
+    </section>
+    <section>
+        <h2>List of aftercare items</h2>
+        <ul>
+            <li>
+                <a href="product.html">
+                    <h3>Travel Kit "Baxter of California"</h3>
+                    <p>
+                        <img src="img/travel-kit-boc.jpg" width="220" height="165" alt="Travel kit Baxter of California">
+                    </p>
+                </a>
+                <p>
+                    $29.99
+                    <button type="button">Buy now</button>
+                </p>
+            </li>
+            <li>
+                <a href="product.html">
+                    <h3>Travel Kit "Baxter of California"</h3>
+                    <p>
+                        <img src="img/travel-kit-boc.jpg" width="220" height="165" alt="Travel kit Baxter of California">
+                    </p>
+                </a>
+                <p>
+                    $29.99
+                    <button type="button">Buy now</button>
+                </p>
+            </li>
+            <li>
+                <a href="product.html">
+                    <h3>Travel Kit "Baxter of California"</h3>
+                    <p>
+                        <img src="img/travel-kit-boc.jpg" width="220" height="165" alt="Travel kit Baxter of California">
+                    </p>
+                </a>
+                <p>
+                    $29.99
+                    <button type="button">Buy now</button>
+                </p>
+            </li>
+            <li>
+                <a href="product.html">
+                    <h3>Travel Kit "Baxter of California"</h3>
+                    <p>
+                        <img src="img/travel-kit-boc.jpg" width="220" height="165" alt="Travel kit Baxter of California">
+                    </p>
+                </a>
+                <p>
+                    $29.99
+                    <button type="button">Buy now</button>
+                </p>
+            </li>
+            <li>
+                <a href="product.html">
+                    <h3>Travel Kit "Baxter of California"</h3>
+                    <p>
+                        <img src="img/travel-kit-boc.jpg" width="220" height="165" alt="Travel kit Baxter of California">
+                    </p>
+                </a>
+                <p>
+                    $29.99
+                    <button type="button">Buy now</button>
+                </p>
+            </li>
+            <li>
+                <a href="product.html">
+                    <h3>Travel Kit "Baxter of California"</h3>
+                    <p>
+                        <img src="img/travel-kit-boc.jpg" width="220" height="165" alt="Travel kit Baxter of California">
+                    </p>
+                </a>
+                <p>
+                    $29.99
+                    <button type="button">Add to cart</button>
+                </p>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <a href="#">1</a>
+            </li>
+            <li>
+                <a>2</a>
+            </li>
+            <li>
+                <a href="#">3</a>
+            </li>
+            <li>
+                <a href="#">4</a>
+            </li>
+        </ul>
+    </section>
 </main>
+
+<footer>
+    <section>
+        <h2>Our location</h2>
+        <p>
+            Barbershop Borodinski <br>
+            Address: 1651 Willard Road, Latriceshire, FL 48221 <br>
+            <a href="blank.html">Directions</a><br>
+            Phone: <a href="tel:+17348957190">+1 734-895-7190</a>
+        </p>
+    </section>
+    <section>
+        <h2>Let's be friends!</h2>
+        <ul>
+            <li>
+                <a href="#">VK</a>
+            </li>
+            <li>
+                <a href="#">Facebook</a>
+            </li>
+            <li>
+                <a href="#">Instagram</a>
+            </li>
+        </ul>
+    </section>
+    <p>
+        Design by:
+        <a href="https://htmlacademy.ru">HTML Academy</a>
+    </p>
+</footer>
+
+<section>
+    <h2>Login</h2>
+    <p>
+        Enter your login and password below
+    </p>
+    <form action="https://echo.htmlacademy.ru" method="post">
+        <label for="login-login">Login</label>
+        <input id="login-login" type="email" name="name" placeholder="email@example.com">
+
+        <label for="login-password">Password</label>
+        <input id="login-password" type="password" name="password" placeholder="*******">
+
+        <label>
+            <input type="checkbox" name="remember">
+        </label>
+        <a href="#">Forgot your password?</a>
+        <button type="submit">Log In</button>
+    </form>
+    <button type="button">Close</button>
+</section>
+
+<section>
+    <h2>Directions</h2>
+    <!--    map is going to be here-->
+    <button type="button">Close</button>
+</section>
+
 </body>
 </html>
