--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <header>
     <nav>
-        <a href=""><img src="img/logo-index.png" alt="logo of borodinski barbershop" width="371" height="155"></a>
+        <a href=""><img src="img/logo-index.svg" alt="logo of borodinski barbershop" width="371" height="155"></a>
         <ul>
             <li>
                 <a href="blank.html">About</a>
@@ -164,7 +164,7 @@
 </section>
 <section>
     <h2>Directions</h2>
-<!--    map is going to be here-->
+    <!--    map is going to be here-->
     <button type="button">Close</button>
 </section>
 
