--- a/product.html
+++ b/product.html
@@ -32,7 +32,49 @@
 </header>
 
 <main>
+    <h1>Travel Kit "Baxter of California"</h1>
+    <ul>
+        <li><a href="index.html">Main Page</a></li>
+        <li><a href="catalog.html">Store</a></li>
+        <li><a href="catalog.html">Aftercare Products</a></li>
+        <li>Travel Kit "Baxter of California"</li>
+    </ul>
 
+    <section>
+        <h2>Product images</h2>
+        <img src="img/large-product-photo.jpg" width="460" height="498" alt="photo of the whole travel kit">
+        <ul>
+            <li>
+                <img src="img/thumbnail-photo-1.jpg" width="140" height="149" alt="photo from the front of the box">
+            </li>
+            <li>
+                <img src="img/thumbnail-photo-2.jpg" width="140" height="149" alt="photo of the carrying case">
+            </li>
+            <li>
+                <img src="img/thumbnail-photo-3.jpg" width="140" height="149" alt="photo of box with the carrying case and the contents of the travel set">
+            </li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Product Description</h2>
+        <p>In Stock</p>
+        <p>SKU: ZG011AQA</p>
+        <p>The DOPP wash bag is a Baxter of California staple and this travel kit includes all your daily cleansing and shaving lotions and potions in an airport-approved travel ready 60ml size with leak resistant caps. This military-inspired bag is made from a robust and waterproof fabric and is secured with a robust zip closure.</p>
+        <p>
+            $29.99
+            <button type="button">Add to cart</button>
+        </p>
+        <h3>Contents:</h3>
+        <ul>
+            <li>60ml Daily Face Wash</li>
+            <li>60ml Oil Free Moisturiser</li>
+            <li>60ml After Shave Balm</li>
+            <li>60ml Super Close Shave Formula</li>
+            <li>60ml Daily Protein Shampoo</li>
+            <li>Dopp Wash Bag</li>
+        </ul>
+    </section>
 </main>
 
 <footer>
