imported all graphics, added favicons for all pages, started assigning class names

--- a/blank.html
+++ b/blank.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Product - Barbershop "Borodinski"</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" sizes="16x16">
+    <link rel="icon" href="images/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body>
 
 <header>
     <nav>
-        <a href="index.html"><img src="img/logo.svg" alt="logo of borodinski barbershop" width="371" height="155"></a>
+        <a href="index.html"><img src="images/logo.svg" alt="logo of borodinski barbershop" width="371" height="155"></a>
         <ul>
             <li>
                 <a href="blank.html">About</a>
