--- a/catalog.html
+++ b/catalog.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Catalog - Barbershop "Borodinski"</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" sizes="16x16">
+    <link rel="icon" href="images/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body>
 
 <header>
     <nav>
-        <a href="index.html"><img src="img/logo.svg" alt="logo of borodinski barbershop" width="111" height="24"></a>
+        <a href="index.html"><img src="images/logo.svg" alt="logo of borodinski barbershop" width="111" height="24"></a>
         <ul>
             <li>
                 <a href="blank.html">About</a>
@@ -97,7 +101,7 @@
                 <a href="product.html">
                     <h3>Travel Kit "Baxter of California"</h3>
                     <p>
-                        <img src="img/travel-kit-boc.jpg" width="220" height="165" alt="Travel kit Baxter of California">
+                        <img src="images/product-1.jpg" width="220" height="165" alt="Travel kit Baxter of California">
                     </p>
                 </a>
                 <p>
@@ -109,7 +113,7 @@
                 <a href="product.html">
                     <h3>Travel Kit "Baxter of California"</h3>
                     <p>
-                        <img src="img/travel-kit-boc.jpg" width="220" height="165" alt="Travel kit Baxter of California">
+                        <img src="images/product-2.jpg" width="220" height="165" alt="Travel kit Baxter of California">
                     </p>
                 </a>
                 <p>
@@ -121,7 +125,7 @@
                 <a href="product.html">
                     <h3>Travel Kit "Baxter of California"</h3>
                     <p>
-                        <img src="img/travel-kit-boc.jpg" width="220" height="165" alt="Travel kit Baxter of California">
+                        <img src="images/product-3.jpg" width="220" height="165" alt="Travel kit Baxter of California">
                     </p>
                 </a>
                 <p>
@@ -133,7 +137,7 @@
                 <a href="product.html">
                     <h3>Travel Kit "Baxter of California"</h3>
                     <p>
-                        <img src="img/travel-kit-boc.jpg" width="220" height="165" alt="Travel kit Baxter of California">
+                        <img src="images/product-4.jpg" width="220" height="165" alt="Travel kit Baxter of California">
                     </p>
                 </a>
                 <p>
@@ -145,7 +149,7 @@
                 <a href="product.html">
                     <h3>Travel Kit "Baxter of California"</h3>
                     <p>
-                        <img src="img/travel-kit-boc.jpg" width="220" height="165" alt="Travel kit Baxter of California">
+                        <img src="images/product-5.jpg" width="220" height="165" alt="Travel kit Baxter of California">
                     </p>
                 </a>
                 <p>
@@ -157,7 +161,7 @@
                 <a href="product.html">
                     <h3>Travel Kit "Baxter of California"</h3>
                     <p>
-                        <img src="img/travel-kit-boc.jpg" width="220" height="165" alt="Travel kit Baxter of California">
+                        <img src="images/product-6.jpg" width="220" height="165" alt="Travel kit Baxter of California">
                     </p>
                 </a>
                 <p>
