--- a/product.html
+++ b/product.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Product - Barbershop "Borodinski"</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" sizes="16x16">
+    <link rel="icon" href="images/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body>
 
 <header>
     <nav>
-        <a href="index.html"><img src="img/logo.svg" alt="logo of borodinski barbershop" width="371" height="155"></a>
+        <a href="index.html"><img src="images/logo.svg" alt="logo of borodinski barbershop" width="371" height="155"></a>
         <ul>
             <li>
                 <a href="blank.html">About</a>
@@ -42,16 +46,16 @@
 
     <section>
         <h2>Product images</h2>
-        <img src="img/large-product-photo.jpg" width="460" height="498" alt="photo of the whole travel kit">
+        <img src="images/large-product-photo.jpg" width="460" height="498" alt="photo of the whole travel kit">
         <ul>
             <li>
-                <img src="img/thumbnail-photo-1.jpg" width="140" height="149" alt="photo from the front of the box">
+                <img src="images/thumbnail-photo-1.jpg" width="140" height="149" alt="photo from the front of the box">
             </li>
             <li>
-                <img src="img/thumbnail-photo-2.jpg" width="140" height="149" alt="photo of the carrying case">
+                <img src="images/thumbnail-photo-2.jpg" width="140" height="149" alt="photo of the carrying case">
             </li>
             <li>
-                <img src="img/thumbnail-photo-3.jpg" width="140" height="149" alt="photo of box with the carrying case and the contents of the travel set">
+                <img src="images/thumbnail-photo-3.jpg" width="140" height="149" alt="photo of box with the carrying case and the contents of the travel set">
             </li>
         </ul>
     </section>
