finished base styling for index, added icons for the login form

--- a/index.html
+++ b/index.html
@@ -89,44 +89,46 @@
             <button class="button gallery-button gallery-button-next" type="button">Next</button>
         </section>
     </div>
-    <section class="contacts">
-        <h2>Contacts</h2>
-        <p>
-            Barbershop Borodinski <br>
-            Location: 1651 Willard Road, Latriceshire, FL 48221 <br>
-            Contact: <a class="contact-phone" href="tel:+17348957190">+1 734-895-7190</a>
-        </p>
-        <p>
-            Hours: <br>
-            Monday-Friday: 9AM-6PM <br>
-            Saturday-Sunday: 10AM-5PM
-        </p>
-        <a class="button" href="#">Navigate</a>
-        <a class="button" href="#">Call us</a>
-    </section>
-    <section class="appointment">
-        <h2>Book now</h2>
-        <p class="appointment-info">Select a date and we will contact you to confirm the availability</p>
-        <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
-            <p class="appointment-item">
-                <label for="appointment-date">Date</label>
-                <input id="appointment-date" type="text" name="date" placeholder="12.31.2023">
+    <div class="index-columns">
+        <section class="contacts">
+            <h2>Contacts</h2>
+            <p>
+                Barbershop Borodinski <br>
+                Location: 1651 Willard Road, Latriceshire, FL 48221 <br>
+                Contact: <a class="contact-phone" href="tel:+17348957190">+1 734-895-7190</a>
             </p>
-            <p class="appointment-item">
-                <label for="appointment-time">Time</label>
-                <input id="appointment-time" type="text" name="time" placeholder="10:00">
+            <p>
+                Hours: <br>
+                Monday-Friday: 9AM-6PM <br>
+                Saturday-Sunday: 10AM-5PM
             </p>
-            <p class="appointment-item">
-                <label for="appointment-name">Name</label>
-                <input id="appointment-name" type="text" name="name" placeholder="Harold">
-            </p>
-            <p class="appointment-item">
-                <label for="appointment-phone">Phone</label>
-                <input id="appointment-phone" type="tel" name="phone" placeholder="+1 270-633-4108">
-            </p>
-            <button class="button" type="submit">Submit</button>
-        </form>
-    </section>
+            <a class="button" href="#">Navigate</a>
+            <a class="button" href="#">Call us</a>
+        </section>
+        <section class="appointment">
+            <h2>Book now</h2>
+            <p class="appointment-info">Select a date and we will contact you to confirm the availability</p>
+            <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
+                <p class="appointment-item">
+                    <label for="appointment-date">Date</label>
+                    <input id="appointment-date" type="text" name="date" placeholder="12.31.2023">
+                </p>
+                <p class="appointment-item">
+                    <label for="appointment-time">Time</label>
+                    <input id="appointment-time" type="text" name="time" placeholder="10:00">
+                </p>
+                <p class="appointment-item">
+                    <label for="appointment-name">Name</label>
+                    <input id="appointment-name" type="text" name="name" placeholder="Harold">
+                </p>
+                <p class="appointment-item">
+                    <label for="appointment-phone">Phone</label>
+                    <input id="appointment-phone" type="tel" name="phone" placeholder="+1 270-633-4108">
+                </p>
+                <button class="button" type="submit">Submit</button>
+            </form>
+        </section>
+    </div>
 </main>
 
 <footer class="main-footer">
