--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="page" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Catalog - Barbershop "Borodinski"</title>
@@ -9,17 +9,19 @@
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="page-body inner-page">
 
-<header>
-    <nav>
-        <a href="index.html"><img src="images/logo.svg" alt="logo of borodinski barbershop" width="111" height="24"></a>
-        <ul>
+<header class="main-header">
+    <nav class="main-navigation container">
+        <a class="main-header-logo" href="index.html">
+            <img src="images/logo.svg" alt="logo of borodinski barbershop" width="111" height="24">
+        </a>
+        <ul class="site-navigation">
             <li>
                 <a href="blank.html">About</a>
             </li>
@@ -29,52 +31,54 @@
             <li>
                 <a href="pricing.html">Pricing</a>
             </li>
-            <li>
+            <li class="site-navigation-current">
                 <a href="catalog.html">Store</a>
             </li>
             <li>
                 <a href="blank.html">Contacts</a>
             </li>
         </ul>
-        <a href="blank.html">Log In</a>
+        <div class="user-navigation">
+            <a class="login-link" href="blank.html">Log In</a>
+        </div>
     </nav>
 </header>
 
-<main>
-    <h1>Aftercare Products</h1>
-    <ul>
+<main class="page-catalog container">
+    <h1 class="page-title">Aftercare Products</h1>
+    <ul class="breadcrumbs">
         <li><a href="index.html">Main Page</a></li>
         <li><a href="catalog.html">Store</a></li>
-        <li>Aftercare Products</li>
+        <li class="breadcrumbs-current">Aftercare Products</li>
     </ul>
-    <section>
+    <section class="filters">
         <h2>Filters</h2>
-        <form method="get" action="https://echo.htmlacademy.ru">
+        <form class="filter" method="get" action="https://echo.htmlacademy.ru">
             <fieldset>
                 <legend>Brand:</legend>
                 <ul>
-                    <li>
-                        <input type="checkbox" name="baxter-of-california" id="filter-baxter-of-california" checked>
+                    <li class="filter-option filter-checkbox">
+                        <input class="filter-input-checkbox filter-input" type="checkbox" name="baxter-of-california" id="filter-baxter-of-california" checked>
                         <label for="filter-baxter-of-california">Baxter of California</label>
                     </li>
-                    <li>
-                        <input type="checkbox" name="mr-natty" id="filter-mr-natty">
+                    <li class="filter-option filter-checkbox">
+                        <input class="filter-input-checkbox filter-input" type="checkbox" name="mr-natty" id="filter-mr-natty">
                         <label for="filter-mr-natty">Mr Natty</label>
                     </li>
-                    <li>
-                        <input type="checkbox" name="suavecito" id="filter-suavecito" checked>
+                    <li class="filter-option filter-checkbox">
+                        <input class="filter-input-checkbox filter-input" type="checkbox" name="suavecito" id="filter-suavecito" checked>
                         <label for="filter-suavecito">Suavecito</label>
                     </li>
-                    <li>
-                        <input type="checkbox" name="malin-goetz" id="filter-malin-goetz">
+                    <li class="filter-option filter-checkbox">
+                        <input class="filter-input-checkbox filter-input" type="checkbox" name="malin-goetz" id="filter-malin-goetz">
                         <label for="filter-malin-goetz">Malin+Goetz</label>
                     </li>
-                    <li>
-                        <input type="checkbox" name="murrays" id="filter-murrays">
+                    <li class="filter-option filter-checkbox">
+                        <input class="filter-input-checkbox filter-input" type="checkbox" name="murrays" id="filter-murrays">
                         <label for="filter-murrays">Murray’s</label>
                     </li>
-                    <li>
-                        <input type="checkbox" name="american-crew" id="filter-american-crew" checked>
+                    <li class="filter-option filter-checkbox">
+                        <input class="filter-input-checkbox filter-input" type="checkbox" name="american-crew" id="filter-american-crew" checked>
                         <label for="filter-american-crew">American Crew</label>
                     </li>
                 </ul>
@@ -82,16 +86,16 @@
             <fieldset>
                 <legend>Category:</legend>
                 <ul>
-                    <li>
-                        <input type="radio" name="product-category" id="filter-shave" value="shave">
+                    <li class="filter-option filter-radio">
+                        <input class="filter-input-radio filter-input" type="radio" name="product-category" id="filter-shave" value="shave">
                         <label for="filter-shave">Shave</label>
                     </li>
-                    <li>
-                        <input type="radio" name="product-category" id="filter-care" value="hair-care" checked>
+                    <li class="filter-option filter-radio">
+                        <input class="filter-input-radio filter-input" type="radio" name="product-category" id="filter-care" value="hair-care" checked>
                         <label for="filter-care">Hair Care</label>
                     </li>
-                    <li>
-                        <input type="radio" name="product-category" id="filter-accessories" value="accessories">
+                    <li class="filter-option filter-radio">
+                        <input class="filter-input-radio filter-input" type="radio" name="product-category" id="filter-accessories" value="accessories">
                         <label for="filter-accessories">Accessories</label>
                     </li>
                 </ul>
@@ -99,19 +103,23 @@
             <button type="submit">Apply</button>
         </form>
     </section>
-    <section>
+
+    <section class="catalog">
         <h2>List of aftercare items</h2>
-        <ul>
-            <li>
+        <ul class="catalog-list">
+            <li class="catalog-item">
                 <a href="product.html">
-                    <h3>Travel Kit "Baxter of California"</h3>
-                    <p>
+                    <h3>
+                        <span class="catalog-category">Travel Kit</span>
+                        <span class="catalog-item-title">"Baxter of California"</span>
+                    </h3>
+                    <p class="catalog-item-image">
                         <img src="images/product-1.jpg" width="220" height="165" alt="Travel kit Baxter of California">
                     </p>
                 </a>
-                <p>
-                    $29.99
-                    <button type="button">Buy now</button>
+                <p class="catalog-item-price">
+                    <b>$29.99</b>
+                    <button class="button" type="button">Buy now</button>
                 </p>
             </li>
             <li>
@@ -175,17 +183,17 @@
                 </p>
             </li>
         </ul>
-        <ul>
-            <li>
+        <ul class="pagination-list">
+            <li class="pagination-item">
                 <a href="#">1</a>
             </li>
-            <li>
+            <li class="pagination-item pagination-item-current">
                 <a>2</a>
             </li>
-            <li>
+            <li class="pagination-item">
                 <a href="#">3</a>
             </li>
-            <li>
+            <li class="pagination-item">
                 <a href="#">4</a>
             </li>
         </ul>
@@ -222,31 +230,31 @@
     </p>
 </footer>
 
-<section>
+<section class="modal modal-login">
     <h2>Login</h2>
-    <p>
+    <p class="modal-description">
         Enter your login and password below
     </p>
-    <form action="https://echo.htmlacademy.ru" method="post">
+    <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
         <label for="login-login">Login</label>
-        <input id="login-login" type="email" name="name" placeholder="email@example.com">
+        <input class="login-icon-user" id="login-login" type="email" name="name" placeholder="email@example.com">
 
         <label for="login-password">Password</label>
-        <input id="login-password" type="password" name="password" placeholder="*******">
+        <input class="login-icon-password" id="login-password" type="password" name="password" placeholder="*******">
 
-        <label>
+        <label class="login-checkbox">
             <input type="checkbox" name="remember">
+            Remember me
         </label>
-        <a href="#">Forgot your password?</a>
-        <button type="submit">Log In</button>
+        <a class="restore" href="#">Forgot your password?</a>
+        <button class="button" type="submit">Log In</button>
     </form>
-    <button type="button">Close</button>
+    <button class="modal-close" type="button">Close</button>
 </section>
-
-<section>
+<section class="modal modal-map">
     <h2>Directions</h2>
     <!--    map is going to be here-->
-    <button type="button">Close</button>
+    <button class="modal-close" type="button">Close</button>
 </section>
 
 </body>
