--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
+
 <body class="page-body">
+
 <header class="main-header">
     <nav class="main-navigation">
         <a class="main-header-logo"><img src="images/logo-index.svg" alt="logo of borodinski barbershop" width="371" height="155"></a>
@@ -82,7 +84,7 @@
             <h2>Photos</h2>
             <figure class="gallery-content">
                 <a href="#">
-                    <img src="images/interior-of-the-shop.jpg" alt="interior photo with barber chairs and a mirror" width="286" height="164">
+                    <img src="images/interior-of-the-shop.jpg" alt="interior of barbershop with chairs and a mirror" width="286" height="164">
                 </a>
             </figure>
             <button class="button gallery-button gallery-button-back" type="button" disabled>Previous</button>
@@ -175,6 +177,7 @@
 
         <label class="login-checkbox">
             <input type="checkbox" name="remember">
+            Remember me
         </label>
         <a class="restore" href="#">Forgot your password?</a>
         <button class="button" type="submit">Log In</button>
