finished basic styling of product page, fixed missing styles across the website

--- a/blank.html
+++ b/blank.html
@@ -44,61 +44,61 @@
 
 </main>
 
-<footer>
-    <section>
+<footer class="main-footer">
+    <section class="footer-contacts">
         <h2>Our location</h2>
         <p>
             Barbershop Borodinski <br>
             Address: 1651 Willard Road, Latriceshire, FL 48221 <br>
-            <a href="blank.html">Directions</a><br>
-            Phone: <a href="tel:+17348957190">+1 734-895-7190</a>
+            <a class="footer-address" href="blank.html">Directions</a><br>
+            Phone: <a class="footer-phone" href="tel:+17348957190">+1 734-895-7190</a>
         </p>
     </section>
-    <section>
+    <section class="footer-social-media">
         <h2>Let's be friends!</h2>
         <ul>
             <li>
-                <a href="#">VK</a>
+                <a class="social-button" href="#">VK</a>
             </li>
             <li>
-                <a href="#">Facebook</a>
+                <a class="social-button" href="#">Facebook</a>
             </li>
             <li>
-                <a href="#">Instagram</a>
+                <a class="social-button" href="#">Instagram</a>
             </li>
         </ul>
     </section>
-    <p>
+    <p class="footer-copyright">
         Design by:
-        <a href="https://htmlacademy.ru">HTML Academy</a>
+        <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
     </p>
 </footer>
 
-<section>
+<section class="modal modal-login">
     <h2>Login</h2>
-    <p>
+    <p class="modal-description">
         Enter your login and password below
     </p>
-    <form action="https://echo.htmlacademy.ru" method="post">
+    <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
         <label for="login-login">Login</label>
-        <input id="login-login" type="email" name="name" placeholder="email@example.com">
+        <input class="login-icon-user" id="login-login" type="email" name="name" placeholder="email@example.com">
 
         <label for="login-password">Password</label>
-        <input id="login-password" type="password" name="password" placeholder="*******">
+        <input class="login-icon-password" id="login-password" type="password" name="password" placeholder="*******">
 
-        <label>
+        <label class="login-checkbox">
             <input type="checkbox" name="remember">
+            Remember me
         </label>
-        <a href="#">Forgot your password?</a>
-        <button type="submit">Log In</button>
+        <a class="restore" href="#">Forgot your password?</a>
+        <button class="button" type="submit">Log In</button>
     </form>
-    <button type="button">Close</button>
+    <button class="modal-close" type="button">Close</button>
 </section>
-
-<section>
+<section class="modal modal-map">
     <h2>Directions</h2>
-<!--    map is going to be here-->
-    <button type="button">Close</button>
+    <!--    map is going to be here-->
+    <button class="modal-close" type="button">Close</button>
 </section>
 
 </body>
