--- a/catalog.html
+++ b/catalog.html
@@ -200,33 +200,33 @@
     </section>
 </main>
 
-<footer>
-    <section>
+<footer class="main-footer">
+    <section class="footer-contacts">
         <h2>Our location</h2>
         <p>
             Barbershop Borodinski <br>
             Address: 1651 Willard Road, Latriceshire, FL 48221 <br>
-            <a href="blank.html">Directions</a><br>
-            Phone: <a href="tel:+17348957190">+1 734-895-7190</a>
+            <a class="footer-address" href="blank.html">Directions</a><br>
+            Phone: <a class="footer-phone" href="tel:+17348957190">+1 734-895-7190</a>
         </p>
     </section>
-    <section>
+    <section class="footer-social-media">
         <h2>Let's be friends!</h2>
         <ul>
             <li>
-                <a href="#">VK</a>
+                <a class="social-button" href="#">VK</a>
             </li>
             <li>
-                <a href="#">Facebook</a>
+                <a class="social-button" href="#">Facebook</a>
             </li>
             <li>
-                <a href="#">Instagram</a>
+                <a class="social-button" href="#">Instagram</a>
             </li>
         </ul>
     </section>
-    <p>
+    <p class="footer-copyright">
         Design by:
-        <a href="https://htmlacademy.ru">HTML Academy</a>
+        <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
     </p>
 </footer>
 
